<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".view.login.LoginActivity">

    <TextView
        android:id="@+id/tv_Login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="105dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/login_title"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_LoginDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/login_desc"
        android:textColor="@color/text_secondary"
        android:textSize="13sp"
        app:layout_constraintStart_toStartOf="@+id/tv_Login"
        app:layout_constraintTop_toBottomOf="@+id/tv_Login" />

    <TextView
        android:id="@+id/tv_Email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/inputemail"
        android:textColor="@color/text_secondary_darker"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/tv_LoginDesc"
        app:layout_constraintTop_toBottomOf="@+id/tv_LoginDesc" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Email"
        tools:alpha="100">

        <com.example.maliva.view.customview.MyEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="textEmailAddress"></com.example.maliva.view.customview.MyEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/tv_Pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/inputpass"
        android:textColor="@color/text_secondary_darker"
        android:textSize="14sp"
        app:layout_constraintStart_toStartOf="@+id/emailEditTextLayout"
        app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordEditTextLayout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="24dp"
        app:endIconMode="password_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_Pass"
        tools:alpha="100">

        <com.example.maliva.view.customview.MyEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edit_text_background"
            android:ems="10"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/loginButton"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="32dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/poppins_semibold"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:text="@string/login_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordEditTextLayout"
        tools:alpha="100" />

    <View
        android:id="@+id/view"
        android:layout_width="120dp"
        android:layout_height="0.7dp"
        android:background="@color/text_secondary"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoogle"
        app:layout_constraintStart_toStartOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"></View>

    <TextView
        android:id="@+id/loginWith"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/orLogin"
        android:fontFamily="@font/poppins_medium"
        android:textColor="@color/text_secondary_darker"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoogle"
        app:layout_constraintEnd_toStartOf="@+id/view2"
        app:layout_constraintStart_toEndOf="@+id/view"
        app:layout_constraintTop_toBottomOf="@+id/loginButton" />

    <View
        android:id="@+id/view2"
        android:layout_width="120dp"
        android:layout_height="0.7dp"
        android:background="@color/text_secondary"
        app:layout_constraintBottom_toTopOf="@+id/buttonGoogle"
        app:layout_constraintEnd_toEndOf="@+id/loginButton"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"></View>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonGoogle"
        android:layout_width="363dp"
        android:layout_height="52dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="64dp"
        android:backgroundTint="@color/white"
        android:fontFamily="@font/poppins_semibold"
        android:paddingEnd="50dp"
        android:text="@string/register_button_google"
        android:textAllCaps="false"
        android:textColor="@color/text_secondary_darker"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:icon="@drawable/ic_google"
        app:iconSize="24dp"
        app:iconTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginButton"
        app:strokeColor="@color/text_secondary"
        app:strokeWidth="0.8dp"
        tools:alpha="100" />

    <TextView
        android:id="@+id/tv_goToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/tvDontHaveAcc"
        android:textColor="@color/text_secondary_darker"
        android:textSize="13sp"
        android:layout_marginBottom="3dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.361"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonGoogle"
        app:layout_constraintVertical_bias="0.906" />

    <TextView
        android:id="@+id/tv_directToRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/directToRegister"
        android:textColor="@color/primary"
        android:layout_marginLeft="6dp"
        android:textSize="13sp"
        android:fontFamily="@font/poppins_semibold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_goToRegister"
        app:layout_constraintStart_toEndOf="@+id/tv_goToRegister"
        app:layout_constraintTop_toTopOf="@+id/tv_goToRegister" />

</androidx.constraintlayout.widget.ConstraintLayout>