<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detail"
    tools:context="view.planner.PlannerFragment">

    <ImageView
        android:id="@+id/btn_back3"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/ic_button_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_tripPlanner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/trip_planner"
        android:textColor="@color/text_primary"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_back3" />

    <View
        android:id="@+id/view8"
        android:layout_width="117.5dp"
        android:layout_height="7dp"
        android:layout_marginHorizontal="22dp"
        android:layout_marginTop="16dp"
        android:background="@color/primary"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_back3" />

    <View
        android:id="@+id/view9"
        android:layout_width="117.5dp"
        android:layout_height="7dp"
        android:layout_marginStart="6dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/view8"
        app:layout_constraintStart_toEndOf="@+id/view8"
        app:layout_constraintTop_toTopOf="@+id/view8" />

    <View
        android:id="@+id/view10"
        android:layout_width="118dp"
        android:layout_height="7dp"
        android:layout_marginStart="6dp"
        android:background="@color/primary"
        app:layout_constraintBottom_toBottomOf="@+id/view9"
        app:layout_constraintStart_toEndOf="@+id/view9"
        app:layout_constraintTop_toTopOf="@+id/view9" />

    <TextView
        android:id="@+id/tv_numberplanner3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="18dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/numberplanner3"
        android:textColor="@color/text_primary"
        android:textSize="58sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view9" />

    <TextView
        android:id="@+id/tv_plannerBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/plannerBudget"
        android:textColor="@color/text_primary"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_numberplanner3" />

    <TextView
        android:id="@+id/tv_chooseBudget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/chooseBudget"
        android:textColor="@color/text_secondary_darker"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/tv_plannerBudget"
        app:layout_constraintTop_toBottomOf="@+id/tv_plannerBudget" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/plannerButton3"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/primary"
        android:fontFamily="@font/poppins_semibold"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:text="@string/planner_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="14sp"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.slider.Slider
        android:id="@+id/sliderPrice"
        style="@style/Widget.App.Slider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginHorizontal="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.27"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_chooseBudget"
        app:trackHeight="8dp"
        app:thumbStrokeWidth="5dp"
        app:thumbStrokeColor="@color/white"
        app:thumbWidth="30dp"
        app:thumbHeight="30dp"
        app:labelBehavior="gone"/>

</androidx.constraintlayout.widget.ConstraintLayout>
